[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
actix-web = "4.5.1"                      # Web framework
uuid = { version = "1.8.0", features = ["v4"] }         # UUID generator
serde = { version = "1.0.200", features = ["derive"] }  # Serialization
aws-config = "1.2.0"                     # AWS SDK config
aws-sdk-dynamodb = "1.17.0"              # AWS DynamoDB client
env_logger = "0.11.3"                    # Logging setup from env
log = "0.4.21"                           # Logging interface
strum_macros = "0.26.1"                  # Enum macro derivations
strum = { version = "0.26.1", features = ["derive"] }   # Enum utilities
derive_more = "0.99.17"                  # More #[derive] macros